--- a/themes/bootstrap3/scss/components/search.scss
+++ b/themes/bootstrap3/scss/components/search.scss
@@ -16,6 +16,32 @@ $thumbnail-width-large:  160px;
   }
 }
 
+.js-record-list {
+  position: relative;
+
+  // Loading spinner
+  .loading-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 2rem;
+    display: flex;
+    font-size: 150%;
+    align-items: flex-start;
+    justify-content: center;
+    background-color: rgba(0,0,0,0.2);
+
+    .loading-spinner {
+      padding: 2rem;
+      background-color: rgba(0,0,0,0.6);
+      border-radius: $border-radius-large;
+      color: $gray-lighter;
+    }
+  }
+}
+
 // Hide these on mobile
 @media (max-width: 767px) {
   #datevispublishDatexWrapper,
@@ -556,6 +582,33 @@ table.search-history-table {
       float: none;
       width: auto;
       padding: 0;
+    }
+  }
+}
+
+/* Simple pagination */
+.js-pagination-simple {
+  margin: 0;
+  text-align: inherit;
+  li {
+    display: inline-block;
+    a.page-prev {
+      margin-right: 0.5rem;
+    }
+    a.page-next {
+      margin-left: 0.5rem;
+    }
+  }
+  .pager-text {
+    margin: 0;
+    span {
+      border: 0;
+      padding: 0;
+      color: $text-color;
+      &:hover {
+        color: $text-color;
+        background-color: transparent;
+      }
     }
   }
 }
