--- a/themes/bootstrap3/less/components/search.less
+++ b/themes/bootstrap3/less/components/search.less
@@ -122,6 +122,10 @@ header .container.navbar { margin-bottom: 0; }
 
   .checkbox-select-item { float: left; }
 
+  .dropdown-menu.qrcode {
+    min-width: inherit;
+  }
+
   @media (max-width: 767px) {
     a {
       max-width: 100%;
