Rename variable, add comments.

--- a/themes/bootstrap3/templates/search/list-grid.phtml
+++ b/themes/bootstrap3/templates/search/list-grid.phtml
@@ -1,17 +1,18 @@
 <?php
-  $listClasses = ['search-grid'];
+  // See also similar code in list-list.phtml
+  $listClassesEscaped = ['search-grid'];
   if ($this->results->getOptions()->loadResultsWithJsEnabled()) {
     $this->headScript()->appendFile('search.js');
     // Ensure OpenURL support is available even if none of the results on the initial
     // page has one:
     $this->headScript()->appendFile('openurl.js');
-    $listClasses[] = 'js-record-list';
+    $listClassesEscaped[] = 'js-record-list';
   }
   if ($class = $this->resultsClass ?? '') {
-    $listClasses[] = $this->escapeHtmlAttr($class);
+    $listClassesEscaped[] = $this->escapeHtmlAttr($class);
   }
 ?>
-<div class="<?=implode(' ', $listClasses)?>" data-backend="<?=$this->escapeHtmlAttr($this->results->getParams()->getSearchClassId())?>">
+<div class="<?=implode(' ', $listClassesEscaped)?>" data-backend="<?=$this->escapeHtmlAttr($this->results->getParams()->getSearchClassId())?>">
   <?php $it = 0; ?>
   <?php foreach ($this->results->getResults() as $current): ?>
     <?=$this->record($current)->getSearchResult('grid', $this->results)?>
