--- a/themes/bootstrap3/templates/search/list-list.phtml
+++ b/themes/bootstrap3/templates/search/list-list.phtml
@@ -1,20 +1,21 @@
 <?php
-  $listClasses = ['record-list'];
+  // See also similar code in list-grid.phtml
+    $listClassesEscaped = ['record-list'];
   if ($this->results->getOptions()->loadResultsWithJsEnabled()) {
     $this->headScript()->appendFile('search.js');
     // Ensure OpenURL support is available even if none of the results on the initial
     // page has one:
     $this->headScript()->appendFile('openurl.js');
-    $listClasses[] = 'js-record-list';
+    $listClassesEscaped[] = 'js-record-list';
   }
   if ($class = $this->resultsClass ?? '') {
-    $listClasses[] = $this->escapeHtmlAttr($class);
+    $listClassesEscaped[] = $this->escapeHtmlAttr($class);
   }
 ?>
 <?php if (!isset($this->indexStart)) $this->indexStart = 0; ?>
 <?php $i = $this->indexStart; ?>
 <?php $listStart = $this->results->getStartRecord() + $i - $this->indexStart; ?>
-<ol class="<?=implode(' ', $listClasses)?>" start="<?=$listStart?>" data-backend="<?=$this->escapeHtmlAttr($this->results->getParams()->getSearchClassId())?>">
+<ol class="<?=implode(' ', $listClassesEscaped)?>" start="<?=$listStart?>" data-backend="<?=$this->escapeHtmlAttr($this->results->getParams()->getSearchClassId())?>">
   <?php foreach ($this->results->getResults() as $current): ?>
     <?php $recordNumber = $this->results->getStartRecord() + $i - $this->indexStart; ?>
     <?php // Data-record-number attribute is for analytics use.  Do not remove. ?>
