Consolidate results scripts to results-scripts.phtml. Cleanup.

--- a/themes/bootstrap3/templates/RecordTab/versions.phtml
+++ b/themes/bootstrap3/templates/RecordTab/versions.phtml
@@ -1,7 +1,13 @@
 <?php
   $results = $this->driver->tryMethod('getVersions', [false, 20]);
   $view = 'list';
-  $this->render('search/results-scripts.phtml', ['displayVersions' => true]);
+  $this->render(
+    'search/results-scripts.phtml',
+    [
+      'displayVersions' => true,
+      'jsResults' => $results->getOptions()->loadResultsWithJsEnabled(),
+    ]
+  );
 ?>
 <div class="results result-view-<?=$this->escapeHtmlAttr($view)?>">
   <nav class="search-header hidden-print">
