--- a/themes/bootstrap3/templates/RecordDriver/DefaultRecord/controls/qrcode.phtml
+++ b/themes/bootstrap3/templates/RecordDriver/DefaultRecord/controls/qrcode.phtml
@@ -7,7 +7,7 @@
     <ul class="dropdown-menu qrcode">
       <li>
         <script type="text/template" class="qrCodeImgTag">
-          <img alt="" src="<?=$this->escapeHtmlAttr($QRCode);?>">
+          <img alt="<?=$this->transEscAttr('QR Code')?>" src="<?=$this->escapeHtmlAttr($QRCode);?>">
         </script>
       </li>
     </ul>
