Use "QR Code" with a caret as the dropdown link.

--- a/themes/bootstrap3/templates/RecordDriver/DefaultRecord/controls/qrcode.phtml
+++ b/themes/bootstrap3/templates/RecordDriver/DefaultRecord/controls/qrcode.phtml
@@ -2,7 +2,8 @@
   <div class="dropdown hidden-xs">
     <a href="#" class="dropdown-toggle qrcodeLink result-link icon-link" data-toggle="dropdown" aria-expanded="false" rel="nofollow">
       <?=$this->icon('qrcode', 'icon-link__icon') ?>
-      <span class="icon-link__label"><?=$this->transEsc('qrcode_show')?></span>
+      <span class="icon-link__label"><?=$this->transEsc('QR Code')?></span>
+      <?=$this->icon('dropdown-caret', 'icon-link__icon') ?>
     </a>
     <ul class="dropdown-menu qrcode">
       <li>
