Convert limit control.

--- a/themes/bootstrap3/templates/search/controls/limit.phtml
+++ b/themes/bootstrap3/templates/search/controls/limit.phtml
@@ -1,13 +1,22 @@
-<?php $limitList = $this->params->getLimitList(); ?>
-<?php if (count($limitList) > 1): ?>
-  <form class="form-inline search-result-limit" action="<?=$this->currentPath() . $this->results->getUrlQuery()->setLimit(null)?>" method="get">
-    <?=$this->results->getUrlQuery()->asHiddenFields(['sort' => '/.*/']);?>
-    <label for="limit"><?=$this->transEsc('Results per page')?></label>
-    <select id="limit" name="limit" class="jumpMenu form-control">
-      <?php foreach ($limitList as $limitVal => $limitData): ?>
-        <option value="<?=$this->escapeHtmlAttr($limitVal)?>"<?=$limitData['selected'] ? ' selected="selected"' : ''?>><?=$this->escapeHtml($limitData['desc'])?></option>
-      <?php endforeach; ?>
-    </select>
-    <noscript><input type="submit" value="<?=$this->transEscAttr("Set")?>" /></noscript>
-  </form>
-<?php endif; ?>
+<?php
+  $limitList = $this->params->getLimitList();
+  if (count($limitList) > 1) {
+    echo $this->component(
+      'menu-button',
+      [
+        'showSelectedValue' => true,
+        'toggleLabel' => 'Results per page',
+        'menuItems' => array_map(
+          function ($item, $val) {
+            return [
+              'label' => $item['desc'],
+              'url' => $this->results->getUrlQuery()->setLimit($val)->getParams(false),
+              'selected' => $item['selected'] ?? false,
+            ];
+          },
+          $limitList,
+          array_keys($limitList)
+        ),
+      ]
+    );
+  }
