changed many asides to nav to reflect their nature as menu, left asides for the recommends. Totally unrelated, made a menu at the OAI to a proper list for accessbility reasons. I also found two instances where the call for the navigation was broken over many lines unlike in all other instances, i took the liberty to adjust those to the perceived standard

--- a/themes/bootstrap3/templates/admin/tags/manage.phtml
+++ b/themes/bootstrap3/templates/admin/tags/manage.phtml
@@ -68,6 +68,6 @@
   <?php endif;?>
 </div>
 
-<aside class="<?=$this->layoutClass('sidebar')?>">
+<nav class="<?=$this->layoutClass('sidebar')?>">
   <?=$this->render("admin/menu.phtml")?>
-</aside>
+</nav>
