--- a/themes/bootstrap3/templates/myresearch/mylist.phtml
+++ b/themes/bootstrap3/templates/myresearch/mylist.phtml
@@ -101,9 +101,11 @@
   <?php endif; ?>
 </div>
 
-<aside class="<?=$this->layoutClass('sidebar')?>" id="myresearch-sidebar">
+<nav class="<?=$this->layoutClass('sidebar')?>" id="myresearch-sidebar">
   <?=$this->context($this)->renderInContext("myresearch/menu.phtml", ['active' => isset($list) ? 'list' . $list['id'] : 'favorites'])?>
-  <?php foreach ($this->results->getRecommendations('side') as $current): ?>
-    <?=$this->recommend($current)?>
-  <?php endforeach; ?>
-</aside>
+  <aside>
+    <?php foreach ($this->results->getRecommendations('side') as $current): ?>
+      <?=$this->recommend($current)?>
+    <?php endforeach; ?>
+  </aside>
+</nav>
