--- a/themes/bootstrap3/templates/myresearch/newpassword.phtml
+++ b/themes/bootstrap3/templates/myresearch/newpassword.phtml
@@ -33,7 +33,7 @@
 
 <?php if ($this->auth()->isLoggedIn()): ?>
   </div>
-  <aside class="<?=$this->layoutClass('sidebar')?>">
+  <nav class="<?=$this->layoutClass('sidebar')?>">
     <?=$this->context($this)->renderInContext("myresearch/menu.phtml", ['active' => 'newpassword'])?>
-  </aside>
+  </nav>
 <?php endif; ?>
