--- a/themes/bootstrap3/templates/myresearch/odmycontent.phtml
+++ b/themes/bootstrap3/templates/myresearch/odmycontent.phtml
@@ -164,6 +164,6 @@
 -->
 </div>
 
-<aside class="<?=$this->layoutClass('sidebar')?>">
+<nav class="<?=$this->layoutClass('sidebar')?>">
   <?=$this->context($this)->renderInContext("myresearch/menu.phtml", ['active' => 'dgcontent'])?>
-</aside>
+</nav>
