--- a/themes/bootstrap3/templates/myresearch/schedulesearch.phtml
+++ b/themes/bootstrap3/templates/myresearch/schedulesearch.phtml
@@ -50,11 +50,6 @@
   </table>
 </div>
 
-<aside class="<?=$this->layoutClass('sidebar')?>" id="myresearch-sidebar">
-  <?=
-    $this->context($this)->renderInContext(
-        "myresearch/menu.phtml",
-        ['active' => 'history']
-    );
-  ?>
-</aside>
+<nav class="<?=$this->layoutClass('sidebar')?>" id="myresearch-sidebar">
+  <?=$this->context($this)->renderInContext("myresearch/menu.phtml",['active' => 'history']); ?>
+</nav>
