--- a/themes/bootstrap3/templates/admin/feedback/home.phtml
+++ b/themes/bootstrap3/templates/admin/feedback/home.phtml
@@ -140,9 +140,9 @@ $this->headTitle($this->translate('VuFind Administration - Feedback Management')
   <?php endif;?>
 </div>
 
-<aside class="<?=$this->layoutClass('sidebar')?>">
+<nav class="<?=$this->layoutClass('sidebar')?>">
   <?=$this->render("admin/menu.phtml")?>
-</aside>
+</nav>
 
 <?php
 $url = $this->url('admin/feedback', ['action' => 'UpdateStatus']);
