--- a/themes/bootstrap3/templates/admin/home.phtml
+++ b/themes/bootstrap3/templates/admin/home.phtml
@@ -61,6 +61,6 @@
   <?php endforeach; ?>
 </div>
 
-<aside class="<?=$this->layoutClass('sidebar')?>">
+<nav class="<?=$this->layoutClass('sidebar')?>">
   <?=$this->render("admin/menu.phtml")?>
-</aside>
+</nav>
