--- a/themes/bootstrap3/templates/admin/overdrive/home.phtml
+++ b/themes/bootstrap3/templates/admin/overdrive/home.phtml
@@ -47,6 +47,6 @@
     </ul>
 
 </div>
-<aside class="<?=$this->layoutClass('sidebar')?>">
+<nav class="<?=$this->layoutClass('sidebar')?>">
   <?=$this->render("admin/menu.phtml")?>
-</aside>
+</nav>
