--- a/themes/bootstrap3/templates/admin/socialstats/home.phtml
+++ b/themes/bootstrap3/templates/admin/socialstats/home.phtml
@@ -30,6 +30,6 @@
   </table>
 </div>
 
-<aside class="<?=$this->layoutClass('sidebar')?>">
+<nav class="<?=$this->layoutClass('sidebar')?>">
   <?=$this->render("admin/menu.phtml")?>
-</aside>
+</nav>
