--- a/themes/bootstrap3/templates/myresearch/edit.phtml
+++ b/themes/bootstrap3/templates/myresearch/edit.phtml
@@ -70,6 +70,6 @@
   <?php endif; ?>
   </form>
 </div>
-<aside class="<?=$this->layoutClass('sidebar')?>" id="myresearch-sidebar">
+<nav class="<?=$this->layoutClass('sidebar')?>" id="myresearch-sidebar">
   <?=$this->context($this)->renderInContext("myresearch/menu.phtml", ['active' => empty($listID) ? 'favorites' : 'list' . $listID])?>
-</aside>
+</nav>
