--- a/themes/bootstrap3/templates/myresearch/editlist.phtml
+++ b/themes/bootstrap3/templates/myresearch/editlist.phtml
@@ -61,7 +61,7 @@
 </form>
 <?php if ($this->auth()->isLoggedIn() && $this->layout()->getTemplate() !== 'layout/lightbox') :?>
   </div>
-  <aside class="<?=$this->layoutClass('sidebar')?>" id="myresearch-sidebar">
+  <nav class="<?=$this->layoutClass('sidebar')?>" id="myresearch-sidebar">
       <?=$this->context($this)->renderInContext("myresearch/menu.phtml", ['active' => empty($this->list->id) ? 'editlist/NEW' : 'list' . $this->list->id])?>
-  </aside>
+  </nav>
 <?php endif; ?>
