--- a/themes/bootstrap3/templates/myresearch/fines.phtml
+++ b/themes/bootstrap3/templates/myresearch/fines.phtml
@@ -97,8 +97,8 @@
   <?php endif; ?>
 </div>
 
-<aside class="<?=$this->layoutClass('sidebar')?>" id="myresearch-sidebar">
+<nav class="<?=$this->layoutClass('sidebar')?>" id="myresearch-sidebar">
   <?=$this->context($this)->renderInContext("myresearch/menu.phtml", ['active' => 'fines'])?>
-</aside>
+</nav>
 
 <?=$this->render('myresearch/notify-account-status.phtml', ['method' => 'fines', 'accountStatus' => $this->accountStatus]); ?>
