--- a/themes/bootstrap3/templates/myresearch/historicloans.phtml
+++ b/themes/bootstrap3/templates/myresearch/historicloans.phtml
@@ -130,6 +130,6 @@
   <?php endif; ?>
 </div>
 
-<aside class="<?=$this->layoutClass('sidebar')?>" id="myresearch-sidebar">
+<nav class="<?=$this->layoutClass('sidebar')?>" id="myresearch-sidebar">
   <?=$this->context($this)->renderInContext("myresearch/menu.phtml", ['active' => 'historicloans'])?>
-</aside>
+</nav>
