changed those individual <nav>s back to <div> and instead made the menu.phtml for admin and myresearch an nav which should be easier to handle, also fixed two typos

--- a/themes/bootstrap3/templates/admin/config/home.phtml
+++ b/themes/bootstrap3/templates/admin/config/home.phtml
@@ -15,6 +15,6 @@
   <?php endif; ?>
 </div>
 
-<nav class="<?=$this->layoutClass('sidebar')?>">
+<div class="<?=$this->layoutClass('sidebar')?>">
   <?=$this->render("admin/menu.phtml")?>
-</nav>
+</div>
