--- a/themes/bootstrap3/templates/admin/maintenance/home.phtml
+++ b/themes/bootstrap3/templates/admin/maintenance/home.phtml
@@ -31,6 +31,6 @@
   </form>
 </div>
 
-<nav class="<?=$this->layoutClass('sidebar')?>">
+<div class="<?=$this->layoutClass('sidebar')?>">
   <?=$this->render("admin/menu.phtml")?>
-</nav>
+</div>
