--- a/themes/bootstrap3/templates/myresearch/changeemail.phtml
+++ b/themes/bootstrap3/templates/myresearch/changeemail.phtml
@@ -27,6 +27,6 @@
     </form>
   <?php endif; ?>
 </div>
-<nav class="<?=$this->layoutClass('sidebar')?>">
+<div class="<?=$this->layoutClass('sidebar')?>">
   <?=$this->context($this)->renderInContext("myresearch/menu.phtml", ['active' => 'newpassword'])?>
-</nav>
+</div>
