--- a/themes/bootstrap3/templates/myresearch/mylist.phtml
+++ b/themes/bootstrap3/templates/myresearch/mylist.phtml
@@ -101,11 +101,11 @@
   <?php endif; ?>
 </div>
 
-<nav class="<?=$this->layoutClass('sidebar')?>" id="myresearch-sidebar">
+<div class="<?=$this->layoutClass('sidebar')?>" id="myresearch-sidebar">
   <?=$this->context($this)->renderInContext("myresearch/menu.phtml", ['active' => isset($list) ? 'list' . $list['id'] : 'favorites'])?>
   <aside>
     <?php foreach ($this->results->getRecommendations('side') as $current): ?>
       <?=$this->recommend($current)?>
     <?php endforeach; ?>
   </aside>
-</nav>
+</div>
