--- a/themes/bootstrap3/templates/search/history.phtml
+++ b/themes/bootstrap3/templates/search/history.phtml
@@ -54,9 +54,9 @@
 </div>
 
 <?php if ($saveSupported): ?>
-  <nav class="<?=$this->layoutClass('sidebar')?>" id="myresearch-sidebar">
-    <?=$this->context($this)->renderInContext("myresearch/menu.phtml", ['active' => 'history']); ?>
-  </nav>
+  <div class="<?=$this->layoutClass('sidebar')?>" id="myresearch-sidebar">
+    <?=$this->context($this)->renderInContext("myresearch/menu.phtml", ['active' => 'history'])?>
+  </div>
 <?php endif; ?>
 
 <?php
