--- a/themes/bootstrap3/templates/admin/overdrive/home.phtml
+++ b/themes/bootstrap3/templates/admin/overdrive/home.phtml
@@ -47,6 +47,6 @@
     </ul>
 
 </div>
-<nav class="<?=$this->layoutClass('sidebar')?>">
+<div class="<?=$this->layoutClass('sidebar')?>">
   <?=$this->render("admin/menu.phtml")?>
-</nav>
+</div>
