--- a/themes/bootstrap3/templates/admin/tags/home.phtml
+++ b/themes/bootstrap3/templates/admin/tags/home.phtml
@@ -15,6 +15,6 @@
 
 </div>
 
-<nav class="<?=$this->layoutClass('sidebar')?>">
+<div class="<?=$this->layoutClass('sidebar')?>">
   <?=$this->render("admin/menu.phtml")?>
-</nav>
+</div>
