aside, nav changes - forgot to reset one template, deeply sorry about that one

--- a/themes/bootstrap3/templates/myresearch/newpassword.phtml
+++ b/themes/bootstrap3/templates/myresearch/newpassword.phtml
@@ -33,7 +33,7 @@
 
 <?php if ($this->auth()->isLoggedIn()): ?>
   </div>
-  <nav class="<?=$this->layoutClass('sidebar')?>">
+  <div class="<?=$this->layoutClass('sidebar')?>">
     <?=$this->context($this)->renderInContext("myresearch/menu.phtml", ['active' => 'newpassword'])?>
-  </nav>
+  </div>
 <?php endif; ?>
