Add support for custom link attributes.

--- a/themes/bootstrap3/templates/_ui/components/menu-button.phtml
+++ b/themes/bootstrap3/templates/_ui/components/menu-button.phtml
@@ -36,7 +36,13 @@
         }
       ?>
       <li class="dropdown__item<?=$extraClasses?>">
-        <a class="dropdown__link" href="<?=$this->escapeHtmlAttr($current['url']) ?>" rel="nofollow">
+        <?php
+          $linkAttributes = array_merge(
+            $current['extraLinkAttributes'] ?? [],
+            ['class' => 'dropdown__link', 'href' => $current['url'], 'rel' => 'nofollow']
+          );
+        ?>
+        <a<?=$this->htmlAttributes($linkAttributes)?>>
           <?=$this->transEsc($current['label']) ?>
         </a>
       </li>
