--- a/themes/bootstrap3/templates/librarycards/selectcard.phtml
+++ b/themes/bootstrap3/templates/librarycards/selectcard.phtml
@@ -1,27 +1,46 @@
 <?php if ($this->user): ?>
   <?php $cards = $this->user->getLibraryCards(); if ($cards->count() > 1): ?>
-    <form class="form-inline" action="<?=$this->url('librarycards-selectcard')?>" method="get" data-clear-account-cache>
-      <label for="library_card"><?=$this->transEsc('Library Card')?></label>
-      <select id="library_card" name="cardID" class="jumpMenu form-control">
-        <?php if (null === $this->user->cat_username): ?>
-          <option value="" selected="selected">-</option>
-        <?php endif; ?>
-        <?php foreach ($cards as $card): ?>
-          <?php
-            $target = '';
-            $username = $card->cat_username;
-            if (strstr($username, '.')) {
-              [$target, $username] = explode('.', $username, 2);
-            }
-            $display = $this->escapeHtml($card->card_name ? $card->card_name : $card->cat_username);
-            if ($target) {
-              $display .= ' (' . $this->transEsc("source_$target", null, $target) . ')';
-            }
-          ?>
-          <option value="<?=$this->escapeHtmlAttr($card->id)?>"<?=strcasecmp($card->cat_username, $this->user->cat_username ?? '') == 0 ? ' selected="selected"' : ''?>><?=$display ?></option>
-        <?php endforeach; ?>
-      </select>
-      <noscript><input type="submit" class="btn btn-default" value="<?=$this->transEscAttr("Set")?>" /></noscript>
-    </form>
+    <?=
+      $this->component(
+          'menu-button',
+          [
+            'showSelectedValue' => true,
+            'toggleLabel' => 'Library Card',
+            'menuItems' => array_merge(
+              // Special case: insert initial value if cat_username is empty:
+              null === $this->user->cat_username
+                ? [
+                  [
+                    'label' => '-',
+                    'url' => $this->url('librarycards-selectcard', [], ['query' => ['cardID' => ""]]),
+                    'extraLinkAttributes' => ['data-clear-account-cache' => ''],
+                    'selected' => true],
+                ]
+                : [],
+              // Standard case: map the cards:
+              array_map(
+                  function ($card) {
+                    $target = '';
+                    $username = $card->cat_username;
+                    if (strstr($username, '.')) {
+                      [$target, $username] = explode('.', $username, 2);
+                    }
+                    $display = $this->escapeHtml($card->card_name ? $card->card_name : $card->cat_username);
+                    if ($target) {
+                      $display .= ' (' . $this->transEsc("source_$target", null, $target) . ')';
+                    }
+                    return [
+                      'label' => $display,
+                      'url' => $this->url('librarycards-selectcard', [], ['query' => ['cardID' => $card->id]]),
+                      'extraLinkAttributes' => ['data-clear-account-cache' => ''],
+                      'selected' => strcasecmp($card->cat_username, $this->user->cat_username ?? '') == 0,
+                    ];
+                  },
+                  iterator_to_array($cards)
+              )
+            ),
+          ]
+      )
+    ?>
   <?php endif; ?>
 <?php endif; ?>
