--- a/themes/bootstrap3/templates/myresearch/controls/sort.phtml
+++ b/themes/bootstrap3/templates/myresearch/controls/sort.phtml
@@ -1,11 +1,24 @@
 <div class="search-controls">
-  <form class="search-sort" action="<?=$this->currentPath()?>" method="get" name="sort">
-    <label for="sort_options_1"><?=$this->transEsc('Sort')?></label>
-    <select id="sort_options_1" name="sort" class="jumpMenu form-control">
-      <?php foreach ($this->sortList as $sortType => $sortData): ?>
-        <option value="<?=$this->escapeHtmlAttr($sortType)?>"<?=$sortData['selected'] ? ' selected="selected"' : ''?>><?=$this->transEsc($sortData['desc'])?></option>
-      <?php endforeach; ?>
-    </select>
-    <noscript><input type="submit" class="btn btn-default" value="<?=$this->transEscAttr("Set")?>" /></noscript>
-  </form>
+  <?php
+    if (!empty($this->sortList)) {
+      echo $this->component(
+          'menu-button',
+          [
+            'showSelectedValue' => true,
+            'toggleLabel' => 'Sort',
+            'menuItems' => array_map(
+                function ($item, $val) {
+                  return [
+                    'label' => $item['desc'],
+                    'url' => '?sort=' . urlencode($val),
+                    'selected' => $item['selected'] ?? false,
+                  ];
+                },
+                $this->sortList,
+                array_keys($this->sortList)
+            ),
+          ]
+      );
+    }
+  ?>
 </div>
