--- a/themes/bootstrap3/templates/search/history-table.phtml
+++ b/themes/bootstrap3/templates/search/history-table.phtml
@@ -37,16 +37,26 @@
       <td><?=$this->escapeHtml($this->localizedNumber($info->getResultTotal()))?></td>
       <?php if ($scheduleSupported): ?>
         <td>
-        <?php if (isset($this->schedule[$info->getSearchId()])): ?>
-          <?php $schedule = $this->schedule[$info->getSearchId()]; ?>
-            <form class="form-inline jumpMenuForm" action="<?= $this->url('myresearch-savesearch')?>" method="get" name="schedule">
-              <select name="schedule" class="jumpMenu form-control" aria-haspopup="true" title="<?=$this->transEscAttr("history_schedule")?>">
-                <?php foreach ($scheduleOptions as $scheduleValue => $scheduleLabel): ?>
-                  <option value="<?=$this->escapeHtmlAttr($scheduleValue)?>"<?=($schedule == $scheduleValue) ? (' selected') : ('')?>><?=$this->transEsc($scheduleLabel)?></option>
-                <?php endforeach; ?>
-              </select>
-              <input type="hidden" name="searchid" value="<?=$this->escapeHtmlAttr($info->getSearchId()) ?>"/>
-            </form>
+          <?php if (isset($this->schedule[$info->getSearchId()])): ?>
+            <?=
+              $this->component(
+                  'menu-button',
+                  [
+                    'showSelectedValue' => true,
+                    'menuItems' => array_map(
+                        function ($label, $val) use ($info) {
+                          return [
+                            'label' => $label,
+                            'url' => $this->url('myresearch-savesearch', [], ['query' => ['schedule' => $val, 'searchid' => $info->getSearchId()]]),
+                            'selected' => $this->schedule[$info->getSearchId()] == $val,
+                          ];
+                        },
+                        $scheduleOptions,
+                        array_keys($scheduleOptions)
+                    ),
+                  ]
+              );
+            ?>
           <?php else: ?>
             <span class="disable"><?=$this->transEsc("cannot set")?></span>
           <?php endif; ?>
