Add ability to include icon in label button.

--- a/themes/bootstrap3/templates/_ui/components/confirm-menu.phtml
+++ b/themes/bootstrap3/templates/_ui/components/confirm-menu.phtml
@@ -13,7 +13,12 @@
 ?>
 
 <div class="confirm-menu">
-  <button class="<?=$toggleClassAttr ?>"><?=$toggleLabelEsc ?></button>
+  <button class="<?=$toggleClassAttr ?>">
+    <?php if (isset($this->labelIcon)): ?>
+      <?=$this->icon($this->labelIcon, 'confirm__icon')?>
+    <?php endif; ?>
+    <?=$toggleLabelEsc ?>
+  </button>
 
   <div class="confirm__options">
     <?php if ($this->description): ?>
