--- a/themes/bootstrap3/templates/cart/cart.phtml
+++ b/themes/bootstrap3/templates/cart/cart.phtml
@@ -46,6 +46,14 @@
           <li><a id="cart-confirm-delete" title="<?=$this->transEscAttr('confirm_delete')?>"><?=$this->transEsc('confirm_dialog_yes')?></a></li>
           <li><a><?=$this->transEsc('confirm_dialog_no')?></a></li>
         </ul>
+        <?=$this->component(
+          'confirm-menu',
+          [
+            'label' => 'Delete',
+            'labelIcon' => 'cart-remove',
+            'toggleClassAttr' => 'toolbar-btn'
+          ]
+        )?>
       </div>
       <div class="btn-group">
         <button type="submit" class="toolbar-btn dropdown-toggle" name="empty" data-toggle="dropdown" id="cart-empty-label" value="1">
