--- a/themes/bootstrap3/templates/RecordDriver/DefaultRecord/list-entry.phtml
+++ b/themes/bootstrap3/templates/RecordDriver/DefaultRecord/list-entry.phtml
@@ -209,6 +209,19 @@
             <li><a id="confirm_delete_item_<?=$this->escapeHtmlAttr($id);?>" title="<?=$this->transEscAttr('confirm_delete_brief')?>"><?=$this->transEsc('confirm_dialog_yes')?></a></li>
             <li><a><?=$this->transEsc('confirm_dialog_no')?></a></li>
           </ul>
+          <?=
+            $this->component(
+                'confirm-menu',
+                [
+                  'label' => 'Delete',
+                  'labelIcon' => 'user-list-remove',
+                  'labelExtraAttributes' => [
+                    'data-lightbox-ignore' => '',
+                  ],
+                  'toggleClassAttr' => 'dropdown-toggle icon-link',
+                ]
+            )
+          ?>
         </div>
 
         <?=$this->driver->supportsCoinsOpenUrl() ? '<span class="Z3988" title="' . $this->escapeHtmlAttr($this->driver->getCoinsOpenUrl()) . '"></span>' : ''?>
